@@ -17,7 +17,6 @@
 
 package org.apache.solr.filestore;
 
-import com.google.common.collect.ImmutableSet;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.http.client.methods.HttpDelete;
 import org.apache.solr.client.solrj.SolrClient;
@@ -139,11 +138,9 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
       checkAllNodesForFile(cluster,"/package/mypkg/v1.0/runtimelibs_v2.jar", expected, false);
       expected = Map.of(
           ":files:/package/mypkg/v1.0", (Predicate<Object>) o -> {
-            @SuppressWarnings({"rawtypes"})
-            List l = (List) o;
+            List<?> l = (List<?>) o;
             assertEquals(2, l.size());
-            @SuppressWarnings({"rawtypes"})
-            Set expectedKeys = ImmutableSet.of("runtimelibs_v2.jar", "runtimelibs.jar");
+            Set<String> expectedKeys = Set.of("runtimelibs_v2.jar", "runtimelibs.jar");
             for (Object file : l) {
               if(! expectedKeys.contains(Utils.getObjectByPath(file, true, "name"))) return false;
             }
@@ -170,8 +167,7 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
     }
   }
 
-  @SuppressWarnings({"unchecked", "rawtypes"})
-  public static void checkAllNodesForFile(MiniSolrCloudCluster cluster, String path, Map expected , boolean verifyContent) throws Exception {
+  public static void checkAllNodesForFile(MiniSolrCloudCluster cluster, String path, Map<String, Object> expected , boolean verifyContent) throws Exception {
     for (JettySolrRunner jettySolrRunner : cluster.getJettySolrRunners()) {
       String baseUrl = jettySolrRunner.getBaseUrl().toString().replace("/solr", "/api");
       String url = baseUrl + "/node/files" + path + "?wt=javabin&meta=true";
@@ -215,7 +211,7 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
   }
 
   public static NavigableObject assertResponseValues(int repeats, SolrClient client,
-                                                     @SuppressWarnings({"rawtypes"})SolrRequest req,
+                                                     SolrRequest<?> req,
                                                      Map<String, Object> vals) throws Exception {
     Callable<NavigableObject> callable = () -> req.process(client);
 
